--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ img {
 }
 
 .upper-bar-wrapper {
+width: 100%;
   background-color: var(--bunting);
 }
 
@@ -151,6 +152,8 @@ img {
 }
 
 .main-bar {
+    width: 940px;
+  margin: 0 auto;
   background-color: var(--alice-blue);
 }
 
@@ -212,6 +215,15 @@ img {
   background-color: var(--apple);
 }
 
+.main-header {
+    width: 100%;
+}
+
+.mid-header {
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
+
 .main-header-description {
   font-family: Cuprum, Arial, sans-serif;
   font-style: italic;
@@ -258,7 +270,12 @@ margin: 0 auto;
 
 .user-block-options-container {
   background-color: var(--white);
-  /*width: 299px;*/
+  grid-column: 1 / 3;
+}
+
+.options-container {
+    display: grid;
+    grid-template-columns: repeat(3, min-content);
 }
 
 /*Почему не белеет фон контейнера?*/
@@ -290,6 +307,8 @@ margin: 0 auto;
 }
 
 .main-navigation {
+    width: 940px;
+    margin: 0 auto;
 background-color: var(--gulf-blue);  
 }
 
@@ -300,6 +319,7 @@ background-color: var(--gulf-blue);
   background-color: var(--gulf-blue);
   display: grid;
   grid-template-columns: repeat(7, auto);
+  padding: 0;
 }
 
 .site-nav-item a {
@@ -610,9 +630,13 @@ color: var(--gulf-blue);
 }
 
 .additional-services-wrapper,
-.perforators-about {
+.perforators-about-container {
   background-color: var(--alice-blue);
   min-width: 100%;
+}
+
+.perforators-about-container {
+    margin-bottom: 0;
 }
 
 .additional-services-wrapper button {
@@ -741,11 +765,6 @@ color: var(--gulf-blue);
   width: 220px;
 }
 */
-
-/*.lost-help-btn {
-  width: 300px;
-}
-*/
 .company-info-wrapper {
   display: grid;
   grid-template-columns: 8fr 4fr;
@@ -762,6 +781,7 @@ color: var(--gulf-blue);
   color: var(--white);
   background-color: var(--amaranth);
 }
+
 
 .contact-form-item {
   color: var(--dark-grey);
@@ -836,6 +856,7 @@ color: var(--gulf-blue);
 
 .footer-1-wrapper {
   background-color: var(--china-blue);
+  margin-top: 0;
 }
 
 .footer-2-wrapper {
@@ -907,6 +928,13 @@ color: var(--gulf-blue);
 
 /*Каталог*/
 
+/*.id-user-options-container {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    }
+    */
+
 .personal-info,
 .personal-info:visited {
   font-family: Cuprum, Arial, sans-serif;
@@ -952,7 +980,21 @@ color: var(--gulf-blue);
   line-height: 18px;
   color: var(--black);
   background-color: var(--old-lace);
-  /*width: 220px;*/
+  /*padding-left: 20px;*/
+  display: table-cell;
+  vertical-align: middle;
+  width: 220px;
+}
+
+.filter-title,
+.sorting-bar {
+ height: 38px;
+}
+
+.filter-sort-catalog {
+    display: grid;
+    grid-template-columns: 220px 700px;
+    gap: 20px;
 }
 
 .pricing {
@@ -975,13 +1017,19 @@ color: var(--gulf-blue);
   color: var(--black);
   background-color: var(--white);
   border: 1px solid var(--whisper);
-  /*width: 220px;*/
+  width: 220px;
 }
 
 .breadcrumbs,
 .sort-by,
 .paginator {
-  list-style: none;
+    list-style: none;
+}
+
+.breadcrumbs {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    padding: 0;
 }
 
 .breadcrumbs-item a,
@@ -1002,6 +1050,15 @@ color: var(--gulf-blue);
   font-weight: normal;
   font-size: 13px;
   line-height: 18px;
+}
+
+.sorting-bar h2 {
+    padding-left: 20px;
+}
+
+.sort-by {
+    display: grid;
+    grid-template-columns: repeat(5, auto);
 }
 
 .sort-by-option a {
@@ -1035,7 +1092,8 @@ color: var(--gulf-blue);
   line-height: 18px;
   color: var(--black);
   background-color: var(--old-lace);
-  /*width: 700px;*/
+  display: grid;
+  grid-template-columns: auto auto;
 }
 
 /*.filter-container {
@@ -1062,8 +1120,31 @@ color: var(--gulf-blue);
   border-top: none;
 }
 
+.filter-by-price {
+padding: 0;  
+}
+
+.filter-by-brand {
+    display: grid;
+    grid-template-rows: repeat(6, auto);
+    padding: 0;
+}
+
+.filter-by-charging {
+    display: grid;
+    grid-template-rows: repeat(3, auto);
+    padding: 0;
+}
+
 .charging-radio {
   color: var(--silver);
+}
+
+.all-product-cards-catalog {
+    display: grid;
+    grid-template-columns: 220px 220px 220px;
+    grid-template-rows: 1 fr 1fr 1fr;
+    gap: 20px;
 }
 
 .added-to-card-container {
@@ -1096,34 +1177,59 @@ color: var(--gulf-blue);
   /*width: 192px;*/
 }
 
+.header-btn-order {
+    background-color: var(--apple);
+}
+
 .btn-continue-shopping {
   color: var(--white);
   background-color: var(--amaranth);
 }
 
-.paginator-link {
+.paginator-link a {
   border: 1px solid var(--whisper);
   border-radius: 2px;
-  /*width: 38px;*/
+  width: 38px;
+  height: 38px;
   background-color: var(--white);
+  font-family: "PT Sans", Arial, sans-serif;
+font-style: normal;
+font-weight: normal;
+font-size: 13px;
+line-height: 18px;
+color: var(--black);
 }
 
-.paginator-link:hover {
+
+.paginator-link a:hover {
   border: 1px solid var(--silver);
 }
 
-.paginator-link:active {
+.paginator-link a:active {
   border: 1px solid var(--amaranth);
 }
 
-.paginator-link:first-child {
+.paginator-link a:first-child {
   background-color: var(--amaranth);
+  color: var(--white);
 }
 
-/*.paginator-link:last-child {
-  width: 140px;
+.paginator-link a:last-child {
+    width: 140px;
+  }
+  
+
+.paginator {
+    display: grid;
+    grid-template-columns: 38px 38px 38px 140px/*repeat(4, auto)*/;
+    margin-left: 200px;
 }
-*/
+
+
+.perforators-about {
+    width: 940px;
+    margin: 0 auto;
+}
 
 .perforators-about-title {
   font-family: Cuprum, Arial, sans-serif;
